# zulip-sandbag-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
config/: base.toml
src/: build.rs  game_visitor.rs  lichess.rs  main.rs  score.rs  setting.rs  util.rs  zulip.rs
